--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,4 @@ github_username:  mathew-hall
 bitbucket_username: mathew_hall
 
 # Build settings
-markdown: redcarpet
-redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "strikethrough", "superscript", "with_toc_data"]
+markdown: kramdown
